# afphoto

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: test.yml
examples/: dump_preview.rs
src/: lib.rs
