[package]
name = "afphoto"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Read embedded preview images from Affinity (.afphoto/.afdesign/.afpub) files. Zero dependencies."
authors = ["Mark Gandolfo <mark@gandolfo.com.au>"]
license = "MIT"
repository = "https://github.com/Asset-Hoard/afphoto"
keywords = ["affinity", "afphoto", "thumbnail", "preview", "image"]
categories = ["parser-implementations", "multimedia::images"]
readme = "README.md"

[dependencies]
